2007-03-29	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.1 release

	* ica/resources/de.ts:
	* ica/resources/es.ts:
	* ica/resources/it.ts:
	* ica/resources/fr.ts:
	fixed translation of logon-dialog-accellerators

	* common/include/isd_connection.h:
	* common/src/isd_connection.cpp:
	* ima/src/client.h:
	* ima/src/client.cpp:
	reload username-tooltip regularly

	* common/src/local_system.cpp:
	win32: - create C:\WINDOWS if it does not exist as otherwise there are
	         strange errors with iTALC Master
	       - partly rewrote logon-code

	* ica/win32/src/stdhdrs.cpp:
	only log warnings and more severe messages - fixes security issue
	where faked keysyms were logged, e.g. key-presses of logon-function
	were logged!

2007-03-22	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	made 1.0.0 release

	* common/src/system_service.cpp:
	- win32: use ChangeServiceConfig2( ... ) instead of calling "sc" which
	  might not exist on target system
	- start service using "net"-command
	- several small fixes

	* common/src/dsa_key.cpp:
	remove existing key-files before saving them

	* common/src/local_system.cpp:
	- disable caps-lock when logging on user under win32
	- use ExitWindowsEx instead of InitiateSystemShutdown - hopefully also
	  shutsdown W2K properly

	* ima/src/client.cpp:
	decreased font-size for messages like "Host not reachable"

	* ima/src/main_window.cpp:
	* common/src/isd_connection.cpp:
	do not create new key-pair if private key could not be loaded and show
	message instead

	* ica/src/ica_main.cpp:
	- run "man ica" if ica is launched with option "-h"
	- fixed bug in argument-processing

	* ima/src/tool_button.cpp:
	always draw button-label with black color

	* ima/resources/de.ts:
	* ima/resources/de.qm:
	* setup/resources/de.ts:
	* setup/resources/de.qm:
	updated German localization and removed obsolete translations

	* setup/dialogs/page_setup_finished.ui:
	* setup/src/dialogs.cpp: