@@ -485,12 +485,12 @@ BOOL vncDesktop::Shutdown()
 	// If we created timers then kill them
 	if (m_timer_polling)
 	{
-		KillTimer(Window(), TimerID::POLL);
+		KillTimer(Window(), TIMER_POLL);
 		m_timer_polling = 0;
 	}
 	if (m_timer_blank_screen)
 	{
-		KillTimer(Window(), TimerID::BLANK_SCREEN);
+		KillTimer(Window(), TIMER_BLANK_SCREEN);
 		m_timer_blank_screen = 0;
 	}
 
@@ -1361,7 +1361,7 @@ vncDesktop::Init(vncServer *server)
 void
 vncDesktop::RequestUpdate()
 {
-	PostMessage(m_hwnd, WM_TIMER, TimerID::POLL, 0);
+	PostMessage(m_hwnd, WM_TIMER, TIMER_POLL, 0);
 }
 
 int
@@ -1888,14 +1888,14 @@ DesktopWndProc(HWND hwnd, UINT iMsg, WPARAM wParam, LPARAM lParam)
 
 	case WM_TIMER:
 		switch (wParam) {
-		case vncDesktop::TimerID::POLL:
+		case vncDesktop::TIMER_POLL:
 			_this->SetPollingFlag(true);
 			break;
-		case vncDesktop::TimerID::BLANK_SCREEN:
+		case vncDesktop::TIMER_BLANK_SCREEN:
 			if (_this->m_server->GetBlankScreen())
 				_this->BlankScreen(TRUE);
 			break;
-		case vncDesktop::TimerID::RESTORE_SCREEN:
+		case vncDesktop::TIMER_RESTORE_SCREEN:
 			_this->BlankScreen(FALSE);
 			break;
 		}
@@ -2237,7 +2237,7 @@ vncDesktop::SetPollingTimer()
 			msec = minPollingCycle;
 		}
 	}
-	m_timer_polling = SetTimer(Window(), TimerID::POLL, msec, NULL);
+	m_timer_polling = SetTimer(Window(), TIMER_POLL, msec, NULL);
 }
 
 inline void vncDesktop::CheckRects(vncRegion &rgn, rectlist &rects)
@@ -2925,11 +2925,11 @@ vncDesktop::UpdateBlankScreenTimer()
 {
 	BOOL active = m_server->GetBlankScreen();
 	if (active && !m_timer_blank_screen) {
-		m_timer_blank_screen = SetTimer(Window(), TimerID::BLANK_SCREEN, 50, NULL);
+		m_timer_blank_screen = SetTimer(Window(), TIMER_BLANK_SCREEN, 50, NULL);
 	} else if (!active && m_timer_blank_screen) {
-		KillTimer(Window(), TimerID::BLANK_SCREEN);
+		KillTimer(Window(), TIMER_BLANK_SCREEN);
 		m_timer_blank_screen = 0;
-		PostMessage(m_hwnd, WM_TIMER, TimerID::RESTORE_SCREEN, 0);
+		PostMessage(m_hwnd, WM_TIMER, TIMER_RESTORE_SCREEN, 0);
 	}
 }
 
