@@ -1,5 +1,16 @@
 2007-03-29	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ica/win32/src/WinVNC.cpp:
+	* ica/win32/win32vnc.cpp:
+	made "-ivsport"-parameter functional under win32, closes #1688198
+
+	* ica/win32/src/vncDesktop.h:
+	* ica/win32/src/vncDesktop.cpp:
+	* ica/win32/src/vncInstHandler.cpp:
+	merged changes from TightVNC-SVN
+
+2007-03-29	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
+
 	* configure.in:
 	made 1.0.1 release
 
